playbooks/kubernetes/rancher-values.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher
spec:
  type: LoadBalancer
